--- a/client/src/translations/pl/common.json
+++ b/client/src/translations/pl/common.json
@@ -1,85 +1,383 @@
 {
-    "home": {
-        "title": "Witaj w Systemie Hermes!"
-    },
-    "about": {
-        "title": "O aplikacji",
-        "body": "Hermes wspiera pracę zespołów i pomaga w organizacji pracy w projektach informatycznych."
-    },
-    "contact": {
-        "title": "Kontakt",
-        "body": "Jeżeli masz uwagi odnośnie funkcjonowania serwisu bądź napotkałeś problem w trakcie korzystania z niego, wypełnij poniższy formularz."
-    },
-    "login": {
-        "title": "Logowanie",
-        "login": "Nazwa użytkownika lub email",
-        "password": "Hasło",
-        "submit": "Zaloguj",
-        "cancel": "Anuluj",
-        "registerTip": "Nie masz jeszcze konta?",
-        "registerLink": "Zarejestruj się"
-    },
-    "register": {
-        "title": "Rejestracja",
-        "email": "Adres email",
-        "username": "Nazwa użytkownika",
-        "firstname": "Imię",
-        "lastname": "Nazwisko",
-        "position": "Stanowisko",
-        "company": "Firma",
-        "phone": "Numer telefonu",
-        "password": "Hasło",
-        "confirm": "Potwierdź hasło",
-        "submit": "Zarejestruj",
-        "cancel": "Anuluj",
-        "reset": "Wyczyść",
-        "loginTip": "Masz już konto? Żaden problem!",
-        "loginLink": "Zaloguj się",
-        "errors": {
-            "serverResponses": {
-                "emptyInputForm": "Przesłany formularz jest pusty",
-                "userAlreadyExists": "Istnieje już użytkownik o podanym loginie lub adresie email"
-            },
-            "requiredFieldIsEmpty": " jest wymagane",
-            "allowedCharsOnly": "Dozwolone są wyłącznie następujące znaki: ",
-            "digitsOnly": "Dozwolone sa wyłącznie cyfry",
-            "emailNotValid": "Podany adres email nie spełnia wymagań dotyczących formatu",
-            "loginNotValid": "Podany login nie spełnia wymagań dotyczących nazwy użytkownika lub adresu email",
-            "passwordsDoNotMatch": "Podane hasła nie są identyczne",
-            "phoneIncorrectFormat": "Niepoprawny format numeru telefonu",
-            "passwordTooShort": "Hasło musi mieć przynajmniej 6 znaków długości",
-            "confirmPasswordIsEmpty": "Potwierdź hasło, aby zarejestrować konto",
-            "incorrectPhoneFormat": "Numer telefonu ma niepoprawny format"
+    "content": {
+        "home": {
+            "title": "Witaj w Systemie Hermes!"
         },
-        "success": "Pomyślnie się zarejestrowałeś!"
-    },
-    "navbar": {
-        "home": "Strona główna",
-        "about": "O aplikacji",
-        "contact": "Kontakt",
-        "login": "Logowanie",
-        "register": "Rejestracja"
-    },
-    "dashboard": {
+        "about": {
+            "title": "O aplikacji",
+            "body": "Hermes wspiera pracę zespołów i pomaga w organizacji pracy w projektach informatycznych."
+        },
+        "contact": {
+            "title": "Kontakt",
+            "body": "Jeżeli masz uwagi odnośnie funkcjonowania serwisu bądź napotkałeś problem w trakcie korzystania z niego, wypełnij poniższy formularz."
+        },
+        "login": {
+            "title": "Logowanie",
+            "login": "Nazwa użytkownika lub email",
+            "password": "Hasło",
+            "submit": "Zaloguj",
+            "cancel": "Anuluj",
+            "registerTip": "Nie masz jeszcze konta?",
+            "registerLink": "Zarejestruj się",
+            "errorMessages": {
+                "accountDoesNotExist": "Konto nie istnieje",
+                "usernameOrPasswordIncorrect": "Niepoprawny login lub hasło",
+                "formValidation": {
+                    "emptyForm": "Przesłany formularz jest pusty",
+                    "requiredFieldIsEmpty": "jest wymagane"
+                }
+            }
+        },
+        "register": {
+            "title": "Rejestracja",
+            "email": "Adres email",
+            "username": "Nazwa użytkownika",
+            "firstname": "Imię",
+            "lastname": "Nazwisko",
+            "position": "Stanowisko",
+            "company": "Firma",
+            "phone": "Numer telefonu",
+            "password": "Hasło",
+            "confirm": "Potwierdź hasło",
+            "submit": "Zarejestruj",
+            "cancel": "Anuluj",
+            "reset": "Wyczyść",
+            "loginTip": "Masz już konto? Żaden problem!",
+            "loginLink": "Zaloguj się",
+            "success": "Pomyślnie się zarejestrowałeś!",
+            "failure": "Wystąpił błąd podczas rejestracji konta",
+            "errorMessages": {
+                "userAlreadyExists": "Istnieje już użytkownik o podanym loginie lub adresie email",
+                "formValidation": {
+                    "emptyForm": "Przesłany formularz jest pusty",
+                    "requiredFieldIsEmpty": "jest wymagane",
+                    "allowedCharsOnly": "Dozwolone są wyłącznie następujące znaki: ",
+                    "digitsOnly": "Dozwolone sa wyłącznie cyfry",
+                    "emailNotValid": "Podany adres email nie spełnia wymagań dotyczących formatu",
+                    "loginNotValid": "Podany login nie spełnia wymagań dotyczących nazwy użytkownika lub adresu email",
+                    "passwordsDoNotMatch": "Podane hasła nie są identyczne",
+                    "phoneIncorrectFormat": "Niepoprawny format numeru telefonu",
+                    "passwordTooShort": "Hasło musi mieć przynajmniej 6 znaków długości",
+                    "confirmPasswordIsEmpty": "Potwierdź hasło, aby zarejestrować konto",
+                    "incorrectPhoneNumberFormat": "Numer telefonu musi posiadać jeden z następujących formatów: "
+                }
+            }
+        },
+        "navbar": {
+            "home": "Strona główna",
+            "about": "O aplikacji",
+            "contact": "Kontakt",
+            "login": "Logowanie",
+            "logout": "Wyloguj się",
+            "register": "Rejestracja"
+        },
+        "dashboard": {
+            
+        },
         "projects": {
-            "title": "Projekty"
+            "title": "Projekty",
+            "tableHeaders": {
+                "name": "Nazwa projektu",
+                "category": "Kategoria",
+                "assignedTeam": "Przydzielony zespół",
+                "dueDate": "Termin realizacji"
+            },
+            "actions": {
+                "viewProject": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+
+                },
+                "createProject": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "editProject": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "deleteProject": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                }
+            }
         },
-        "team": {
-            "title": "Zespół"
+        "teams": {
+            "title": "Zespoły",
+            "tableHeaders": {
+                "name": "Nazwa zespołu",
+                "leader": "Kierownik"
+            },
+            "actions": {
+                "viewTeam": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "createTeam": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "editTeam": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "deleteTeam": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                }
+            }
         },
         "tasks": {
-            "title": "Zadania"
+            "title": "Zadania",
+            "tableHeaders": {
+                "name": "Nazwa zadania",
+                "category": "Kategoria",
+                "dueDate": "Termin realizacji"
+            },
+            "actions": {
+                "viewTask": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "createTask": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "editTask": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "deleteTask": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                }
+            }
         },
-        "activities": {
-            "title": "Operacje"
+        "userActions": {
+            "title": "Akcje użytkownika",
+            "tableHeaders": {
+                "name": "Nazwa akcji"
+            },
+            "actions": {
+                "viewUserActions": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "createUserAction": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "editUserAction": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "deleteUserAction": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                }
+            }
         },
-        "recent": {
-            "title": "Ostatnia aktywność"
+        "recentActivity": {
+            "title": "Ostatnia aktywność",
+            "tableHeaders": {
+                "name": "Nazwa aktywności",
+                "type": "Typ",
+                "content": "Treść"
+            },
+            "actions": {
+                "viewRecentActivity": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                }
+            }
+        },
+        "company": {
+            "title": "Firma",
+            "tableHeaders": {
+                "name": "Nazwa firmy",
+                "description": "Opis",
+                "owner": "Właściciel"
+            },
+            "actions": {
+                "viewCompany": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "createCompany": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "editCompany": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "deleteCompany": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                }
+            }
+        },
+        "roles": {
+            "title": "Role",
+            "tableHeaders": {
+                "name": "Nazwa roli",
+                "description": "Opis"
+            },
+            "actions": {
+                "viewRole": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "createRole": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "editRole": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                },
+                "deleteRole": {
+                    "fieldNames": {
+
+                    },
+                    "actionResults": {
+                        "success": "",
+                        "failure": ""
+                    }
+                }
+            }
         }
     },
     "misc": {
         "phrases": {
-            "field": "Pole"
+            "field": "Pole",
+            "or": "lub"
         }
+    },
+    "errorMessages": {
+        "cannotDisplayRequestedResource": "Nie można wyświetlić żądanego zasobu",
+        "cannotAccessRequestedResource": "Nie można otworzyć żądanego zasobu",
+        "cannotFindRequestedResource": "Nie można odnaleźć żądanego zasobu",
+        "permissionsNotSufficient": "Dostęp do żądanego zasobu wymaga odpowiednich uprawnień"
     }
 }
